# ibpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ibpy/: endpoints.py  exceptions.py  helpers.py  ib_rest.py
ibpy/models/: __init__.py  account.py  conids.py  historical_data.py  tickle.py
schemas_gen/: gen_model.sh
